- Clase comentada. - Agregado un tester con gui. - Cambiada la implementación de Base64 por la implementada con Commons-codec de Apache debido a licencias con la anterior por parte de SUN.